--- a/html/contact.html
+++ b/html/contact.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
 		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/showcase.css">
+	<link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/contact.css">
 </head>
 
@@ -35,7 +35,7 @@
             <div id="mobile-nav" class="navbar-menu">
                 <div class="navbar-end">
                 <div class="navbar-item">
-                    <a class="navbar-item" href="/showcase.html"> About Me </a>
+                    <a class="navbar-item" href="/index.html"> About Me </a>
                 </div>
                 <div class="navbar-item">
                     <a class="navbar-item" href="#about-me"> Blog </a>
@@ -63,7 +63,7 @@
                 <div class="column is-12 hero-menu-desktop has-text-centered">
                     <ul>
                     <li>
-                        <a href="/showcase.html">About me</a>
+                        <a href="/index.html">About me</a>
                     </li>
                     <li>
                         <a href="#about-me">Blog</a>
