--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="./css/showcase.css" />
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <script
     src="https://kit.fontawesome.com/2828f7885a.js"
     integrity="sha384-WAsFbnLEQcpCk8lM1UTWesAf5rGTCvb2Y+8LvyjAAcxK1c3s5c0L+SYOgxvc6PWG"
@@ -411,7 +411,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.11"></script>
     <!-- footer-template.jsを読み込む -->
     <script src='./js/app.js'></script>
-    <script src="./js/showcase.js"></script>
+    <script src="./js/index.js"></script>
     <link
     href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css"
     rel="stylesheet"
