--- a/index.html
+++ b/index.html
@@ -179,10 +179,6 @@
             data-aos-easing="linear"
             >
             <h1 class="title has-text-centered section-title">興味・関心</h1>
-
-            <h2 class="subtitle">
-                ビジネス・プライベート
-            </h2>
             <br />
             </div>
             <div class="columns is-12">
@@ -196,6 +192,7 @@
                 <h2>
                 プロダクトマネジメント
                 </h2>
+                <p>PMClubというコミュニティでプロダクト開発について学んでいる修行の身です。「プロダクトマネジメントのすべて」「正しいものを正しくつくる」という本がバイブルです</p>
             </div>
             <div
                 class="column is-4 has-text-centered"
@@ -207,6 +204,7 @@
                 <h2>
                 アジャイル開発
                 </h2>
+                <p>アジャイルの考え方が好きです。<a href="https://agilemanifesto.org/iso/ja/manifesto.html"> アジャイルソフトウェア開発宣言</a>というアジャイル開発に関わる人に向けたマインドセットは色々なものに応用ができるなーと感じてます</p>
             </div>
             <div
                 class="column is-4 has-text-centered"
@@ -218,6 +216,8 @@
                 <h2>
                 AI
                 </h2>
+                <p>ChatGPT・NotionAIを代表とするLLMをベースにしたAI技術が、プロダクトに組み込まれサービスとして誰でも利用できる世の中。とてつもなく変化の早い時代でワクワクが止まりません
+                </p>
             </div>
             </div>
             <hr />
@@ -227,11 +227,13 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
             >
-                <i class="fas fa-upload fa-3x"></i>
+                <i class="fas fa-badminton fa-3x"></i>
                 <hr />
                 <h1>
                     バドミントン
                 </h1>
+                <p>中・高・大と10年間、ゆるーく・ながーく競技を続けてきました！バドを通じて多くの繋がりができたので、これからも楽しく取り組みたいです。今は５月の大会に向けて練習中です！
+                </p>
             </div>
             <div
                 class="column is-4 has-text-centered"
@@ -243,6 +245,7 @@
                 <h2>
                 旅行
                 </h2>
+                <p>出身が九州ということもあり、西日本はほとんど制覇したので、東京にいる機会をいかして北陸や東北に行ってみたいな〜と計画中です</p>
             </div>
             <div
                 class="column is-4 has-text-centered"
@@ -254,6 +257,7 @@
                 <h2>
                 個人開発
                 </h2>
+                <p>エンジニアとしての実務はない(なりたい！)のですが、Python,Rails,Swift 等気になったら本やUdemyで学んで「まずは手を動かしてみる」の場として取り組んでいます。今は、育児・家事タスク見える化アプリを別途、FlutterFlowで開発中です！※ユーザインタビューも行って「誰の何の課題を解決するのか？そこに本当に課題はあるのか？」に拘って進めてます</p>
             </div>
             </div>
         </div>
