--- a/index.html
+++ b/index.html
@@ -135,30 +135,30 @@
                     <img class="is-rounded" src="./img/myicon.png">
                 </figure>
                 <br/>
-                <strong> 松田 千輝 | Matsuda Kazuki-5</strong>
+                <strong> 松田 千輝(matkaz) | Matsuda Kazuki-5</strong>
             </p>
             <br/>
-            <p>熊本出身。熊本→大分→鳥取→東京と移住。</p>
+            <p>熊本出身。熊本→大分→鳥取→東京と移住。東京２年目。</p>
+            <p>ITエンジニアになりたくて就職した会社では、営業配属。</p>
+            <p>それを機会に「プロダクトマネジメント」に興味を持つ。</p>
+            <p>Tech0では「手を動かす」「新たな繋がりをつくる」</p>
+            <p>たくさんアウトプットしていきたい！よろしくお願いします！</p>
+            <p> ※現在：メガネ → コンタクトです(笑)</p>
+            </p>
             <br />
             <div class="is-divider"></div>
             <div class="columns about-links">
                 <div class="column">
                 <p class="heading">
-                    <strong>Give me a ring</strong>
+                    <strong>View my page</strong>
                 </p>
-                <p class="subheading">123-456-7890</p>
+                <p class="subheading"><a href="https://matkaz.netlify.app">matkaz</a></p>
                 </div>
                 <div class="column">
                 <p class="heading">
-                    <strong>Email Me</strong>
+                    <strong>View my GitHub</strong>
                 </p>
-                <p class="subheading">hello@example.com</p>
-                </div>
-                <div class="column">
-                <p class="heading">
-                    <strong>View my portfolio</strong>
-                </p>
-                <p class="subheading">example.com</p>
+                <p class="subheading"><a href="https://github.com/Kazzuki">@Kazzuki</a></p>
                 </div>
             </div>
             </div>
@@ -257,7 +257,7 @@
                 <h2>
                 個人開発
                 </h2>
-                <p>エンジニアとしての実務はない(なりたい！)のですが、Python,Rails,Swift 等気になったら本やUdemyで学んで「まずは手を動かしてみる」の場として取り組んでいます。今は、育児・家事タスク見える化アプリを別途、FlutterFlowで開発中です！※ユーザインタビューも行って「誰の何の課題を解決するのか？そこに本当に課題はあるのか？」に拘って進めてます</p>
+                <p>エンジニアとしての実務はない(なりたい！)のですが、Python,Rails,Swift 等気になったら本やUdemyで学んで、まずは「手を動かしてみる」を第一に取り組んでいます。今は、「育児・家事タスク可視化アプリ」をFlutterFlowで開発中です！※ユーザインタビューも行い「誰の何の課題を解決するのか？そこに本当に課題はあるのか？」に拘り進めてます</p>
             </div>
             </div>
         </div>
@@ -273,7 +273,7 @@
             data-aos-easing="linear"
         >
             <div class="column is-12">
-            <h1 class="title has-text-centered section-title">仕事</h1>
+            <h1 class="title has-text-centered section-title">仕事(準備中)</h1>
             </div>
             <div class="column is-3">
             <a href="#">
@@ -291,66 +291,6 @@
                 class="image is-2by1 work-item"
                 style="
                     background-image: url('https://picsum.photos/320/180?image=10');
-                "
-                ></figure>
-            </a>
-            </div>
-            <div class="column is-3">
-            <a href="#">
-                <figure
-                class="image is-2by1 work-item"
-                style="
-                    background-image: url('https://picsum.photos/320/180?image=20');
-                "
-                ></figure>
-            </a>
-            </div>
-            <div class="column is-3">
-            <a href="#">
-                <figure
-                class="image is-2by1 work-item"
-                style="
-                    background-image: url('https://picsum.photos/320/180?image=30');
-                "
-                ></figure>
-            </a>
-            </div>
-            <div class="column is-3">
-            <a href="#">
-                <figure
-                class="image is-2by1 work-item"
-                style="
-                    background-image: url('https://picsum.photos/320/180?image=40');
-                "
-                ></figure>
-            </a>
-            </div>
-            <div class="column is-3">
-            <a href="#">
-                <figure
-                class="image is-2by1 work-item"
-                style="
-                    background-image: url('https://picsum.photos/320/180?image=50');
-                "
-                ></figure>
-            </a>
-            </div>
-            <div class="column is-3">
-            <a href="#">
-                <figure
-                class="image is-2by1 work-item"
-                style="
-                    background-image: url('https://picsum.photos/320/180?image=60');
-                "
-                ></figure>
-            </a>
-            </div>
-            <div class="column is-3">
-            <a href="#">
-                <figure
-                class="image is-2by1 work-item"
-                style="
-                    background-image: url('https://picsum.photos/320/180?image=70');
                 "
                 ></figure>
             </a>
@@ -373,28 +313,28 @@
             data-aos="fade-in"
             data-aos-easing="linear"
             >
-            <h1>Adobe Experience Design</h1>
-            <progress class="progress" value="70" max="100">30%</progress>
-            <h1>Adobe After Effects</h1>
-            <progress class="progress" value="65" max="100">30%</progress>
-            <h1>Visual Studio Code</h1>
-            <progress class="progress" value="58" max="100">45%</progress>
-            <h1>Sketch</h1>
-            <progress class="progress" value="90" max="100">60%</progress>
+            <h1>python</h1>
+            <progress class="progress" value="60" max="100">60%</progress>
+            <h1>SQL</h1>
+            <progress class="progress" value="60" max="100">60%</progress>
+            <h1>HTML/CSS</h1>
+            <progress class="progress" value="90" max="100">90%</progress>
+            <h1>Node.js</h1>
+            <progress class="progress" value="20" max="100">20%</progress>
             </div>
             <div
             class="column is-6"
             data-aos="fade-in"
             data-aos-easing="linear"
             >
-            <h1>HTML</h1>
-            <progress class="progress" value="85" max="100">30%</progress>
-            <h1>CSS</h1>
-            <progress class="progress" value="95" max="100">30%</progress>
-            <h1>VueJS</h1>
-            <progress class="progress" value="70" max="100">45%</progress>
-            <h1>React</h1>
-            <progress class="progress" value="60" max="100">60%</progress>
+            <h1>Vue.js</h1>
+            <progress class="progress" value="20" max="100">20%</progress>
+            <h1>FlutterFlow(lowcode)</h1>
+            <progress class="progress" value="40" max="100">40%</progress>
+            <h1>git</h1>
+            <progress class="progress" value="80" max="100">80%</progress>
+            <h1>Notion</h1>
+            <progress class="progress" value="80" max="100">80%</progress>
             </div>
         </div>
         </div>
